--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,105 @@
 @import "setup.css";
 
 :root {
-	font-family: helvetica, sans-serif;
+	font-size: 1rem;
 }
 
-iframe {
-	width: 100%;
-	margin-top: 20vh;
-	border: 0px;
+html {
+	scroll-behavior: smooth;
 }
 
-video {
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
+body {
+	font-family: "ibm-plex-mono", sans-serif;
+	font-size: 20px;
+
+	background-color: whitesmoke;
+	background-image: url("data:image/svg+xml,%3C!-- svg: first layer --%3E%3Csvg viewBox='0 0 300 300' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='5.28' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' opacity='30%' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+
+	overflow-x: hidden;
 }
 
-@media only screen and (max-width: 600px){
-	iframe {
-		margin-top: 10vh;
+nav {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+
+	nav-logo, nav-text {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		gap: .25rem;
+
+		svg {
+			max-width: 22px;
+		}
 	}
+}
+
+nav picture {
+	width: 100%;
+	max-width: 50px;
+}
+
+#faq-1 {
+
+	inner-column {
+		padding: 0;
+	}
+}
+
+#xxl-footer {
+
+	inner-column {
+		padding: 1rem 0;
+	}
+}
+
+#work-experience {
+	
+	inner-column {
+		padding: 1rem 0;
+	}
+}
+
+/* Typography */
+
+.loud-voice {
+	font-size: clamp(20px, 2rem, 3.5rem);
+	font-weight: 700;
+
+	text-wrap: balance;
+
+	@media (width >= 600px){
+	font-size: 3rem;
+	font-weight: 700;
+	}
+}
+
+.attention-voice {
+	font-size: 1.5rem;
+	font-weight: 600;
+	line-height: .7;
+
+	@media (width >= 600px){
+	font-size: 2rem;
+	font-weight: 600;
+	line-height: .9;
+	}
+}
+
+.elevated-voice {
+	font-size: 1.5rem;
+}
+
+.speaking-voice {
+	font-size: 1rem;
+}
+
+.calm-voice {
+	font-size: .875rem;
+}
+
+h1 + p {
+	margin-top: 1rem;
 }
